--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,53 +21,50 @@
 		<div class="carosello">
 			<div class="items">
 				<div class="item item1">
-					<img src="../static/img/leonardo-1.jpeg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Gioconda</h3></a> <a href="artista.html"><h4>
-								- Leonardo Da Vinci</h4></a>
+						<a href="opera.html"><h3>Gioconda</h3></a> 
+						<a href="artista.html"><h4>	- Leonardo Da Vinci</h4></a>
 					</div>
 				</div>
 				<div class="item item2">
-					<img src="../static/img/raffaello-1.jpg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Una scena ripresa a caso</h3></a> <a
-							href="artista.html"><h4>- Raffaello</h4></a>
+						<a href="opera.html"><h3>Una scena ripresa a caso</h3></a>
+						<a href="artista.html"><h4>- Raffaello</h4></a>
 					</div>
 				</div>
 				<div class="item item3">
-					<img src="../static/img/VanGogh-1.jpg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Notte stellata</h3></a> <a
-							href="artista.html"><h4>- Van Gogh</h4></a>
+						<a href="opera.html"><h3>Notte stellata</h3></a>
+						<a href="artista.html"><h4>- Van Gogh</h4></a>
 					</div>
 				</div>
 				<div class="item item4">
-					<img src="../static/img/leonardo-1.jpeg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Gioconda</h3></a> <a href="artista.html"><h4>
-								- Leonardo Da Vinci</h4></a>
+						<a href="opera.html"><h3>Gioconda</h3></a> 
+						<a href="artista.html"><h4>	- Leonardo Da Vinci</h4></a>
 					</div>
 				</div>
 				<div class="item item5">
-					<img src="../static/img/VanGogh1.jpg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Ritratto di Van Gogh</h3></a> <a
-							href="artista.html"><h4>- Van Gogh</h4></a>
+						<a href="opera.html"><h3>Ritratto di Van Gogh</h3></a> 
+						<a href="artista.html"><h4>- Van Gogh</h4></a>
 					</div>
 				</div>
 				<div class="item item6">
-					<img src="../static/img/raffaello-1.jpg" alt="">
+					<img src="#" alt="">
 					<div class="panel-info p-3">
-						<a href="opera.html"><h3>Una scena a caso</h3></a> <a
-							href="artista.html"><h4>- Raffaello</h4></a>
+						<a href="opera.html"><h3>Una scena a caso</h3></a> 
+						<a href="artista.html"><h4>- Raffaello</h4></a>
 					</div>
 				</div>
 				<div class="item p-5">
 					<div class="panel-more-art">
-						<p>
-							Guarda<br>le nostre
-						</p>
-						<a href="#">Collezioni</a>
+						<p>Guarda<br>le nostre </p><a href="#">Collezioni</a>
 					</div>
 				</div>
 			</div>
@@ -77,45 +74,45 @@
 		<!-- inizio versione-mobile -->
 		<div class="carosello-mobile">
 			<div class="item item1">
-				<img src="../static/img/leonardo-1.jpeg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Gioconda</h3></a> <a href="artista.html"><h4>
-							- Leonardo Da Vinci</h4></a>
+					<a href="opera.html"><h3>Gioconda</h3></a> 
+					<a href="artista.html"><h4>	- Leonardo Da Vinci</h4></a>
 				</div>
 			</div>
 			<div class="item item2">
-				<img src="../static/img/raffaello-1.jpg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Una scena ripresa a caso</h3></a> <a
-						href="artista.html"><h4>- Raffaello</h4></a>
+					<a href="opera.html"><h3>Una scena ripresa a caso</h3></a> 
+					<a href="artista.html"><h4>- Raffaello</h4></a>
 				</div>
 			</div>
 			<div class="item item3">
-				<img src="../static/img/VanGogh-1.jpg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Notte stellata</h3></a> <a
-						href="artista.html"><h4>- Van Gogh</h4></a>
+					<a href="opera.html"><h3>Notte stellata</h3></a> 
+					<a href="artista.html"><h4>- Van Gogh</h4></a>
 				</div>
 			</div>
 			<div class="item item4">
-				<img src="../static/img/leonardo-1.jpeg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Gioconda</h3></a> <a href="artista.html"><h4>
-							- Leonardo Da Vinci</h4></a>
+					<a href="opera.html"><h3>Gioconda</h3></a> 
+					<a href="artista.html"><h4>	- Leonardo Da Vinci</h4></a>
 				</div>
 			</div>
 			<div class="item item5">
-				<img src="../static/img/VanGogh1.jpg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Ritratto di Van Gogh</h3></a> <a
-						href="artista.html"><h4>- Van Gogh</h4></a>
+					<a href="opera.html"><h3>Ritratto di Van Gogh</h3></a> 
+					<a href="artista.html"><h4>- Van Gogh</h4></a>
 				</div>
 			</div>
 			<div class="item item6">
-				<img src="../static/img/raffaello-1.jpg" alt="">
+				<img src="#" alt="">
 				<div class="panel-info p-2">
-					<a href="opera.html"><h3>Una scena a caso</h3></a> <a
-						href="artista.html"><h4>- Raffaello</h4></a>
+					<a href="opera.html"><h3>Una scena a caso</h3></a> 
+					<a href="artista.html"><h4>- Raffaello</h4></a>
 				</div>
 			</div>
 			<div class="item item--more-art p-3">
@@ -147,14 +144,14 @@
 					</div>
 				</div>
 				<div class="col-lg-8 mb-5">
-					<img src="../static/img/vanGogh-1.jpg" class="card-img-top"
+					<img th:src="@{/img/vanGogh-1.jpg}"  class="card-img-top"
 						alt="Van Gogh">
 				</div>
 			</div>
 
 			<div class="row row-reverse opere-2-colonne">
 				<div class="col-lg-8 mb-5">
-					<img src="../static/img/vanGogh1.jpg" class="card-img-top"
+					<img th:src="@{/img/vanGogh1.jpg}" class="card-img-top"
 						alt="Van Gogh">
 				</div>
 				<div class="col-lg-4">
@@ -183,7 +180,7 @@
 					</div>
 				</div>
 				<div class="col-lg-8 mb-5">
-					<img src="../static/img/raffaello-1.jpg" class="card-img-top"
+					<img th:src="@{/img/raffaello-1.jpg}" class="card-img-top"
 						alt="Van Gogh">
 				</div>
 
