--- a/src/main/resources/templates/admin/gestisciArtisti.html
+++ b/src/main/resources/templates/admin/gestisciArtisti.html
@@ -15,16 +15,13 @@
 	</header>
 
 
-
-
 	<main class="container">
 
 		<h3>1) Registrazione</h3>
 
 		<!-- inizio REGISTRAZIONE CURATORE -->
 		<!-- Button trigger modal -->
-		<a data-bs-toggle="modal" href="#exampleModal"> Registra un
-			artista </a>
+		<a data-bs-toggle="modal" href="#exampleModal"> Registra un	artista </a>
 
 		<!-- Modal -->
 		<div class="modal fade" id="exampleModal" tabindex="-1"
@@ -34,8 +31,7 @@
 					<div class="modal-header">
 						<h5 class="modal-title" id="exampleModalLabel">Registrazione
 							dell'artista</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"	aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
 
@@ -141,7 +137,8 @@
 						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 						reprehenderit in voluptate velit esse cillum dolore eu fugiat
 						nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+						sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</td>
 				</tr>
 				<tr>
 					<th scope="row">1</th>
@@ -165,8 +162,8 @@
 						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 						reprehenderit in voluptate velit esse cillum dolore eu fugiat
 						nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
-
+						sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</td>
 				</tr>
 				<tr>
 					<th scope="row">1</th>
@@ -183,15 +180,14 @@
 						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 						reprehenderit in voluptate velit esse cillum dolore eu fugiat
 						nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
-
+						sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</td>
 				</tr>
 			</tbody>
 		</table>
 		<!-- fine TABELLA -->
 
 	</main>
-
 
 
 
