--- a/src/main/resources/templates/admin/gestisciCollezioni.html
+++ b/src/main/resources/templates/admin/gestisciCollezioni.html
@@ -26,27 +26,23 @@
 			collezione </a>
 
 		<!-- Modal -->
-		<div class="modal fade" id="exampleModal" tabindex="-1"
-			aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="exampleModalLabel">Registrazione</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"	aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
 
 						<form>
 							<div class="mb-3">
-								<label for="exampleInputEmail1" class="form-label">nome
-									della collezione</label> <input type="email" class="form-control"
-									id="exampleInputEmail1" aria-describedby="emailHelp">
+								<label for="exampleInputEmail1" class="form-label">nome	della collezione</label> 
+								<input type="text" class="form-control">
 							</div>
 							<div class="mb-3">
-								<label for="exampleInputEmail1" class="form-label">nome
-									del curatore</label> <input type="email" class="form-control"
-									id="exampleInputEmail1" aria-describedby="emailHelp">
+								<label for="exampleInputEmail1" class="form-label">nome	del curatore</label> 
+								<input type="text" class="form-control">
 							</div>
 							<button type="submit" class="btn btn-primary">Registra</button>
 						</form>
