--- a/src/main/resources/templates/admin/gestisciCuratori.html
+++ b/src/main/resources/templates/admin/gestisciCuratori.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/base.html :: headerfiles(title='SIW')"></head>
+<head th:replace="fragments/base.html :: headerfiles(title='gestisci curatori')"></head>
 <body>
 
 	<!-- inizio MENU -->
@@ -14,16 +14,15 @@
 
 
 	<main class="container">
-
-		<h3>1) Registrazione</h3>
+	
+	<h3>1) Registrazione</h3>
 
 		<!-- inizio REGISTRAZIONE CURATORE -->
 		<!-- Button trigger modal -->
 		<a data-bs-toggle="modal" href="#exampleModal"> Registra un	curatore </a>
 
 		<!-- Modal -->
-		<div class="modal fade" id="exampleModal" tabindex="-1"
-			aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal fade" id="exampleModal" tabindex="-1"	aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -32,20 +31,20 @@
 					</div>
 					<div class="modal-body">
 
-						<form th:action="@{/manageCuratori}" method="POST" th:object="${curatore}">
+						<form th:action="@{/admin/gestisciCuratoriAdd}" method="POST" th:object="${curatore}">
 							<div th:if="${#fields.hasGlobalErrors()}">
   								<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
 							</div>
 							<div class="row">
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="text" th:field="*{nome}" class="form-control" id="floatingInput"	placeholder="nome" required> 
+										<input type="text" th:field="*{nome}" class="form-control" id="floatingInput" placeholder="nome" required> 
 										<label for="floatingInput">nome</label>
 									</div>
 								</div>
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="text" th:field="*{cognome}" class="form-control" id="floatingInput"	placeholder="cognome" required> 
+										<input type="text" th:field="*{cognome}" class="form-control" id="floatingInput" placeholder="cognome" required> 
 										<label for="floatingInput">cognome</label>
 									</div>
 								</div>
@@ -54,13 +53,13 @@
 							<div class="row">
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="date" th:field="*{dataNascita}" class="form-control" id="floatingInput" placeholder="00/00/0000" required> 
+										<input type="date" th:field="*{dataDiNascita}" class="form-control" id="floatingInput" placeholder="00/00/0000" required> 
 											<label for="floatingInput">data	di nascita</label>
 									</div>
 								</div>
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="text" th:field="*{luogoNascita}" class="form-control" id="floatingInput" placeholder="luogo_di_nascita" required> 
+										<input type="text" th:field="*{luogoDiNascita}" class="form-control" id="floatingInput" placeholder="luogo_di_nascita" required> 
 										<label for="floatingInput">luogo di nascita</label>
 									</div>
 								</div>
@@ -71,13 +70,10 @@
 								<input type="email" th:field="*{email}" class="form-control" placeholder="email" aria-label="email" aria-describedby="basic-addon1" required>
 							</div>
 							<div class="form-floating mb-3">
-								<input type="tel" th:field="*{telefono}" class="form-control" id="floatingInput" placeholder="000000000" required> 
+								<input type="tel" th:field="*{numeroDiTelefono}" class="form-control" id="floatingInput" placeholder="000000000" required> 
 								<label for="floatingInput">telefono</label>
 							</div>
-							<div class="form-floating mb-3">
-								<input type="number" th:field="*{matricola}" class="form-control" id="floatingInput"	placeholder="9999" required> 
-								<label for="floatingInput">matricola</label>
-							</div>
+							
 							<button type="submit" class="btn btn-primary">Registra</button>
 						</form>
 
@@ -87,6 +83,8 @@
 			</div>
 		</div>
 		<!-- fine REGISTRAZIONE CURATORE -->
+
+		
 		
 
 		<h3 class="mt-5">2) Visualizzazione</h3>
@@ -109,12 +107,13 @@
 					<th scope="row">1</th>
 					<td th:text="${curatore.nome}">Mario</td>
 					<td th:text="${curatore.cognome}">Rossi</td>
-					<td>06/06/1990</td>
-					<td>Roma</td>
-					<td>email@mail.com</td>
-					<td>0606060606</td>
-					<td>1564</td>
+					<td th:text="${curatore.dataDiNascita}">06/06/1990</td>
+					<td th:text="${curatore.luogoDiNascita}">Roma</td>
+					<td th:text="${curatore.email}">email@mail.com</td>
+					<td th:text="${curatore.numeroDiTelefono}">0606060606</td>
+					<td>collezioni...</td>
 				</tr>
+				<!-- 
 				<tr>
 					<th scope="row">2</th>
 					<td>Mario</td>
@@ -135,6 +134,8 @@
 					<td>0606060606</td>
 					<td>1564</td>
 				</tr>
+				 -->
+				
 			</tbody>
 		</table>
 		<!-- fine TABELLA -->
