--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:replace="fragments/base.html :: headerfiles(title='SIW')"> </head>
 <body>
-	<header th:replace="fragments/base.html :: intestazione"></header>
     <div>
-    	
    		<h2>Sei loggato</h2>
     </div>
-    <footer th:replace="fragments/base.html :: fondo(home='/default')"></footer>
+    <footer th:replace="fragments/base.html :: footer"></footer>
 </body>
 </html>
