--- a/src/main/resources/templates/admin/gestisciArtisti.html
+++ b/src/main/resources/templates/admin/gestisciArtisti.html
@@ -35,18 +35,18 @@
 					</div>
 					<div class="modal-body">
 
-						<form>
+						<form th:action="@{/admin/artista}" method="POST" th:object="${artista}">
 							<div class="row">
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="nome"> <label for="floatingInput">nome</label>
+										<input type="text" class="form-control" id="floatingInput"	placeholder="nome" th:field="*{nome}" required> 
+										<label for="floatingInput">nome</label>
 									</div>
 								</div>
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="cognome"> <label for="floatingInput">cognome</label>
+										<input type="text" class="form-control" id="floatingInput"	placeholder="cognome" th:field="*{cognome}" required> 
+										<label for="floatingInput">cognome</label>
 									</div>
 								</div>
 							</div>
@@ -54,16 +54,14 @@
 							<div class="row">
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="00/00/0000"> <label for="floatingInput">data
-											di nascita</label>
+										<input type="date" class="form-control" id="floatingInput"	placeholder="00/00/0000" th:field="*{dataDiNascita}"> 
+										<label for="floatingInput">data	di nascita</label>
 									</div>
 								</div>
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="luogo_di_nascita"> <label
-											for="floatingInput">luogo di nascita</label>
+										<input type="text" class="form-control" id="floatingInput"	placeholder="luogo_di_nascita" th:field="*{luogoDiNascita}"> 
+										<label for="floatingInput">luogo di nascita</label>
 									</div>
 								</div>
 							</div>
@@ -71,28 +69,26 @@
 							<div class="row">
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="00/00/0000"> <label for="floatingInput">data
-											di morte</label>
+										<input type="date" class="form-control" id="floatingInput"	placeholder="00/00/0000" th:field="*{dataDiMorte}"> 
+										<label for="floatingInput">data	di morte</label>
 									</div>
 								</div>
 								<div class="col-sm">
 									<div class="form-floating mb-3">
-										<input type="email" class="form-control" id="floatingInput"
-											placeholder="luogo_di_nascita"> <label
-											for="floatingInput">luogo di morte</label>
+										<input type="text" class="form-control" id="floatingInput"	placeholder="luogo_di_morte" th:field="*{luogoDiMorte}"> 
+										<label for="floatingInput">luogo di morte</label>
 									</div>
 								</div>
 							</div>
 
 							<div class="form-floating mb-3">
-								<input type="email" class="form-control" id="floatingInput"
-									placeholder="italia"> <label for="floatingInput">nazionalità</label>
+								<input type="text" class="form-control" id="floatingInput"	placeholder="italia" th:field="*{nazionalità}"> 
+								<label for="floatingInput">nazionalità</label>
 							</div>
 
 							<div class="form-floating mb-3">
-								<input type="email" class="form-control" id="floatingInput"
-									placeholder="italia"> <label for="floatingInput">biografia</label>
+								<input type="email" class="form-control" id="floatingInput"	placeholder="italia"> 
+								<label for="floatingInput">biografia</label>
 							</div>
 
 							<button type="submit" class="btn btn-primary">Registra</button>
@@ -111,8 +107,8 @@
 			<thead>
 				<tr>
 					<th scope="col">#</th>
-					<th scope="col">nome</th>
-					<th scope="col">cognome</th>
+					<th scope="col">nome & cognome</th>
+					<!-- <th scope="col">cognome</th> -->
 					<th scope="col">data nascita</th>
 					<th scope="col">luogo nascita</th>
 					<th scope="col">data morte</th>
@@ -122,28 +118,29 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
+				<tr th:each="artista : ${artisti}">
 					<th scope="row">1</th>
-					<td>Mario</td>
-					<td>Rossi</td>
-					<td>06/06/1990</td>
-					<td>Roma</td>
-					<td>06/06/2990</td>
-					<td>Milano</td>
-					<td>Italia</td>
-					<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-						reprehenderit in voluptate velit esse cillum dolore eu fugiat
-						nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<td th:href="@{'/artista' + '/' + ${artista.cognome}}"> 
+						<span th:text="${artista.nome}">Mario</span>
+						<span th:text="${artista.cognome}">Rossi</span>
+					</td>
+					
+					<!-- <td>Rossi</td> -->
+					<td th:text="${artista.dataDiNascita}">06/06/1990</td>
+					<td th:text="${artista.luogoDiNascita}">Roma</td>
+					<td th:text="${artista.dataDiMorte}">06/06/2990</td>
+					<td th:text="${artista.luogoDiMorte}">Milano</td>
+					<td th:text="${artista.nazionalità}">Italia</td>
+					<td >
+						<ul th:each="opera : ${artisti.opere}">
+							<li></li>
+						</ul>
 					</td>
 				</tr>
+
 				<tr>
-					<th scope="row">1</th>
-					<td>Mario</td>
-					<td>Rossi</td>
+					<th scope="row">statico</th>
+					<td>Mario Rossi</td>
 					<td>06/06/1990</td>
 					<td>Roma</td>
 					<td>06/06/2990</td>
@@ -166,9 +163,8 @@
 					</td>
 				</tr>
 				<tr>
-					<th scope="row">1</th>
-					<td>Mario</td>
-					<td>Rossi</td>
+					<th scope="row">statico</th>
+					<td>Mario Rossi</td>
 					<td>06/06/1990</td>
 					<td>Roma</td>
 					<td>06/06/2990</td>
