--- a/src/main/resources/templates/collezione.html
+++ b/src/main/resources/templates/collezione.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/base.html :: headerfiles(title='SIW')"></head>
+<head th:replace="fragments/base.html :: headerfiles(title='collezione')"></head>
 <body class="collezione">
 
 	<!-- inizio MENU -->
