--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -19,7 +19,7 @@
 		class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 		<div class="container container-fluid">
 			<a class="navbar-brand" href="home.html" th:href="@{/index}"> 
-			<img src="img/logo.svg"	alt="logo">
+			<img th:src="@{/img/logo.svg}" alt="logo">
 			</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -30,20 +30,20 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html" th:href="@{/index}">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="artisti.html" th:href="@{/artisti}">artisti</a></li>
-					<li class="nav-item"><a class="nav-link" href="collezioni.html" th:href="@{/collezioni}">collezioni</a></li>
-					<li class="nav-item"><a class="nav-link" href="informazioni.html" th:href="@{/informazioni}">informazioni</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/index}">Home</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/artisti}">artisti</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/collezioni}">collezioni</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/informazioni}">informazioni</a></li>
 
 					<li class="nav-item dropdown nav-item-administrator">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">amministratore</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="loginForm.html" th:href="@{/login}">Login</a></li>
+							<li><a class="dropdown-item" th:href="@{/login}">Login</a></li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="../admin/gestisciOpere">gestisci Opere</a></li>
-							<li><a class="dropdown-item" href="../admin/gestisciArtisti">gestisci Artisti</a></li>
-							<li><a class="dropdown-item" href="../admin/gestisciCuratori">gestisci Curatori</a></li>
-							<li><a class="dropdown-item" href="../admin/gestisciCollezioni">gestisci Collezioni</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciOpere}">gestisci Opere</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciArtisti}">gestisci Artisti</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciCuratori}">gestisci Curatori</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciCollezioni}" >gestisci Collezioni</a></li>
 						</ul>
 					</li>
 					
@@ -73,7 +73,7 @@
 				<div class="col-lg-4">
 					<ul class="uppercase">
 						<li><a href="#">Chi siamo</a></li>
-						<li><a href="risorse.html" th:href="@{/risorse}">Risorse usate</a></li>
+						<li><a th:href="@{/risorse}">Risorse usate</a></li>
 					</ul>
 				</div>
 
