--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -42,7 +42,7 @@
 							<li><hr class="dropdown-divider"></li>
 							<li><a class="dropdown-item" th:href="@{/admin/gestisciOpere}">gestisci Opere</a></li>
 							<li><a class="dropdown-item" th:href="@{/admin/gestisciArtisti}">gestisci Artisti</a></li>
-							<li><a class="dropdown-item" th:href="@{/gestisciCuratori}">gestisci Curatori</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciCuratori}">gestisci Curatori</a></li>
 							<li><a class="dropdown-item" th:href="@{/admin/gestisciCollezioni}" >gestisci Collezioni</a></li>
 						</ul>
 					</li>
