--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -36,14 +36,15 @@
 					<li class="nav-item"><a class="nav-link" th:href="@{/informazioni}">informazioni</a></li>
 
 					<li class="nav-item dropdown nav-item-administrator">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">amministratore</a>
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Utente</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" th:href="@{/login}">Login</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" th:href="@{/admin/gestisciOpere}">gestisci Opere</a></li>
+							<li><a class="dropdown-item" th:href="@{/login}">Login Utente</a></li>
+							<li><a class="dropdown-item" th:href="@{/register}">Registra Utente</a></li>
+ 							<li><hr class="dropdown-divider"></li>
+<!-- 							<li><a class="dropdown-item" th:href="@{/admin/gestisciOpere}">gestisci Opere</a></li>
 							<li><a class="dropdown-item" th:href="@{/admin/gestisciArtisti}">gestisci Artisti</a></li>
 							<li><a class="dropdown-item" th:href="@{/admin/gestisciCuratori}">gestisci Curatori</a></li>
-							<li><a class="dropdown-item" th:href="@{/admin/gestisciCollezioni}" >gestisci Collezioni</a></li>
+							<li><a class="dropdown-item" th:href="@{/admin/gestisciCollezioni}" >gestisci Collezioni</a></li> -->
 						</ul>
 					</li>
 					
