--- a/src/main/resources/templates/admin/gestisciArtisti.html
+++ b/src/main/resources/templates/admin/gestisciArtisti.html
@@ -5,7 +5,7 @@
 <body>
 
 	<!-- inizio MENU -->
-	<nav th:replace="fragments/base.html :: menu"></nav>
+	<nav th:replace="fragments/base.html :: menu-admin"></nav> 
 	<!-- fine MENU -->
 
 	<header class="container text-center">
